added link to new news website

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="nav-links">
                 <ul class="flex">
                     <li class="hover-link nav-item" id="news-website"><a href="NewsWebsite/index.html">News</a></li>
+                    <li class="hover-link nav-item" id="news-website"><a href="news-website-main/index.html">News2</a></li>
                     <li class="hover-link nav-item" id="netclix"><a href="Netclix/netflix.html">Netclix</a></li>
                 </ul>
             </div>
