Changed API provider for News Website

--- a/NewsWebsite/index.html
+++ b/NewsWebsite/index.html
@@ -20,7 +20,7 @@
             <div class="nav-links">
                 <ul class="flex">
                     <li class="hover-link nav-item" id="politics" onclick="onNavItemClick('politics')">Politics</li>
-                    <li class="hover-link nav-item" id="finance" onclick="onNavItemClick('finance')">Finance</li>
+                    <li class="hover-link nav-item" id="world" onclick="onNavItemClick('world')">World</li>
                     <li class="hover-link nav-item" id="sports" onclick="onNavItemClick('sports')">Sports</li>
                     <li class="hover-link nav-item" id="technology" onclick="onNavItemClick('technology')">Technology
                     </li>
@@ -44,7 +44,7 @@
             <div class="weather">
                 <div class="weather-body flex" id="weather-body">
                     <p id="weather-location"></p>
-                    <img src = "./assets/cloud.png" alt="Weather Image" class="weather-img" id="weather-img" width="45px">
+                    <img src="./assets/cloud.png" alt="Weather Image" class="weather-img" id="weather-img" width="45px">
 
                     <div class="weather-box">
                         <p class="temperature" id="temperature"></p>
@@ -55,12 +55,12 @@
         </div>
 
         <div class="cards-container container flex" id="cards-container">
-
         </div>
     </main>
 
     <template id="template-news-card">
         <div class="card">
+
             <div class="card-header">
                 <img src="https://via.placeholder.com/400x200" alt="news-image" id="news-img">
             </div>
