Added dark mode to news website

--- a/Netclix/netflix.html
+++ b/Netclix/netflix.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix India - Watch TV Shows Online, Watch Movies Online</title>
+    <title>Netclix India - Watch TV Shows Online, Watch Movies Online</title>
     <link rel="stylesheet" href="netflix.css">
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
