--- a/NewsWebsite/index.html
+++ b/NewsWebsite/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NewsLink+</title>
+    <title>News+</title>
+    <link rel="shortcut icon" href="assets/NewsPlusLogoShort.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="../assets/z-logo.png" type="image/x-icon">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <div class="main-nav container grid">
 
             <a href="#" onclick="reload()" class="company-logo">
-                <img src="./assets/news-logo.png" alt="company logo">
+                <img src="assets/NewsPlus.png" alt="company logo">
             </a>
 
             <div class="mobile-nav grid">
