Rebranding Portfolio Test

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="assets/z-logo.png" type="image/x-icon">
+    <title>My Portfolio</title>
 </head>
 
 <body>
@@ -19,6 +19,7 @@
             <div class="nav-links">
                 <ul class="flex">
                     <li class="hover-link nav-item" id="news-website"><a href="NewsPlus/index.html">News+</a></li>
+                    <li class="hover-link nav-item" id="news-website"><a href="MyPortfolio/index.html">Portfolio2</a></li>
                 </ul>
             </div>
 
