modified look and feel of Portfolio

--- a/index.html
+++ b/index.html
@@ -90,16 +90,15 @@
                     <span class="skills-name">Java</span>
 
                     <h3 class="skills-subtitle">Web Development</h3>
-                    <span class="skills-name">HTML5</span>
-                    <span class="skills-name">CSS3</span>
-                    <span class="skills-name">Javascript</span>
-                    <span class="skills-name">Bootstrap</span>
+                    <span class="skills-name">HTML</span>
+                    <span class="skills-name">CSS</span>
+                    <span class="skills-name">JavaScript</span>
+                    <span class="skills-name">Flask</span>
 
                     <h3 class="skills-subtitle">DBMS</h3>
                     <span class="skills-name">MySQL</span>
 
-                    <h3 class="skills-subtitle">Frameworks and Tools</h3>
-                    <span class="skills-name">Flask</span>
+                    <h3 class="skills-subtitle">Tools</h3>
                     <span class="skills-name">Git</span>
                     <span class="skills-name">GitHub</span>
 
@@ -204,7 +203,6 @@
         <div class="footer__container bd-grid">
             <div class="footer__data">
                 <img class="footer-logo" src="assets/z-logo.png" alt="">
-                <!-- <h2 class="footer__title">Zeeshan Haque</h2> -->
                 <p class="footer__text">Portfolio Website</p>
             </div>
 
