updated skills section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="navigation-header">
         <nav class="nav bd-grid">
             <div>
-                
+
                 <a href="#" class="nav-logo"><img src="assets/z-logo.png" alt=""></a>
             </div>
 
@@ -59,15 +59,21 @@
 
                 <div>
                     <h2 class="about-subtitle">Zeeshan Haque</h2>
-                    <span class="about-profession">Software Dev. <br> MMA Enthusiast <br> Tech Geek <br> Knowledge
-                        Seeker </span>
-                    <p class="about-text">Passionate about coding and a dedicated MMA enthusiast. Just as I meticulously
-                        debug code, I dissect fight strategies and techniques with the same level of precision. The
-                        dynamic nature of both fields keeps me engaged and constantly learning.
+                    <span class="about-profession">Aspiring Software Dev. <br> MMA Enthusiast <br>
+                        Truth Seeker </span>
+                    <p class="about-text">As an aspiring Software Developer, my world revolves around crafting elegant
+                        solutions. I relish the feeling of transforming problems into efficient code, and witnessing
+                        them come to life.
                     </p>
 
-                    <p class="about-text">Seeking to be inspired, to envision the unlikely, to work hard for
-                        things that are worth it, and to be surrounded by those who bring out the best in me.
+                    <p class="about-text">On the flip side, I embrace the rigor of martial arts, where every bout is a
+                        high-speed chess match of strategy and precision; an ultimate test of realism and mental
+                        toughness. Practicing MMA fosters confidence and inspires me to push my limits in and out of the
+                        coding arena.
+                    </p>
+
+                    <p class="about-text">Seeking to be inspired, to work hard for things that are worth it, and to to
+                        be in the company of individuals who bring out the best in me.
                     </p>
 
                     <div class="resume">
@@ -128,8 +134,9 @@
 
                     <div class="projects-about">
                         <a href="https://github.com/zeeshanhaque/IdeaSpace" class="button" target="_blank"
-                            rel="noopener noreferrer" class="projects-about-name"><strong>IdeaSpace</strong> {Flask, SQLAlchemy}<span
-                                class="projects-link"><img src="assets/social-icons/github-icon.png" alt=""></span></a>
+                            rel="noopener noreferrer" class="projects-about-name"><strong>IdeaSpace</strong> {Flask,
+                            SQLAlchemy}<span class="projects-link"><img src="assets/social-icons/github-icon.png"
+                                    alt=""></span></a>
                     </div>
                 </div>
 
@@ -219,7 +226,7 @@
 
             <div class="footer__data">
                 <h2 class="footer__title">ADDRESS</h2>
-    
+
                 <div>
                     <i class='bx bx-location-plus'></i> Palghar, Maharashtra
                 </div>
